--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "mongodb": "^5.9.2",
     "mysql2": "^3.11.3",
+    "neo4j-driver": "^5.25.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
   },
