--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_NAME = "booking"
+DATABASE_NAME=booking
+MYSQL_URL=mysql://migration:1234@mysql:3306/booking3
+MONGO_URL=mongodb://mongo:27017/booking
+NEO4J_URL=neo4j://neo4j:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=12345678
